--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "format:check": "prettier --check .",
     "format:write": "prettier --write .",
@@ -41,6 +41,7 @@
     "react-native": "0.74.1",
     "react-native-animatable": "^1.3.3",
     "react-native-autocomplete-input": "^5.4.0",
+    "react-native-easy-content-loader": "^0.3.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-google-places-autocomplete": "^2.5.6",
@@ -54,6 +55,7 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-stepper-ui": "^0.0.9",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
