--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
     "react-native-ui-stepper": "^1.2.4",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-virtualized-view": "^1.0.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
